--- a/Limbo/App.config
+++ b/Limbo/App.config
@@ -29,6 +29,18 @@ function dobet()
     end
 end</value>
             </setting>
+            <setting name="serverSeed" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="clientSeed" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="nonce" serializeAs="String">
+                <value>1</value>
+            </setting>
+            <setting name="nonceStop" serializeAs="String">
+                <value>10</value>
+            </setting>
         </Limbo.Properties.Settings>
     </userSettings>
 </configuration>
