--- a/Limbo/Properties/Settings.settings
+++ b/Limbo/Properties/Settings.settings
@@ -21,5 +21,17 @@ function dobet()
     end
 end</Value>
     </Setting>
+    <Setting Name="serverSeed" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="clientSeed" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="nonce" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">1</Value>
+    </Setting>
+    <Setting Name="nonceStop" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">10</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
