new update of Limbo bot
added inputs to be able to use clearance cookie and user-agent

--- a/Limbo/App.config
+++ b/Limbo/App.config
@@ -41,6 +41,12 @@ end</value>
             <setting name="nonceStop" serializeAs="String">
                 <value>10</value>
             </setting>
+            <setting name="cookie" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="agent" serializeAs="String">
+                <value />
+            </setting>
         </Limbo.Properties.Settings>
     </userSettings>
 </configuration>
