--- a/Limbo/Properties/Settings.settings
+++ b/Limbo/Properties/Settings.settings
@@ -33,5 +33,11 @@ end</Value>
     <Setting Name="nonceStop" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">10</Value>
     </Setting>
+    <Setting Name="cookie" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="agent" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
