add cloudflare proxy url

--- a/Limbo/App.config
+++ b/Limbo/App.config
@@ -17,7 +17,7 @@
                 <value>0</value>
             </setting>
             <setting name="indexSite" serializeAs="String">
-                <value>0</value>
+                <value>stake.com</value>
             </setting>
             <setting name="textCode" serializeAs="String">
                 <value>nextbet  = 0.00000000 --sets your first bet.
